# SpaceShooter

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
SpaceShooter/: Source.cpp  SpaceShooter.sln  SpaceShooter.vcxproj  glad.c
dependencies/glad/include/GLAD/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/include/GLFW/: glfw3.h
res/img/: attribution.txt
res/models/: collectible.blend  collectible.mtl  enemy.blend  enemy.mtl  mine.blend  mine.mtl  planet.blend  planet.mtl  ship.blend  ship.mtl  sun.blend  sun.mtl
sources/include/GLAD/: glad.h
src/: AmbientLight.cpp  AmbientLight.h  Buffer.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Cube.cpp  Cube.h  DefaultBuff.cpp  DefaultBuff.h  DiffuseLight.cpp  DiffuseLight.h  FontManager.cpp  FontManager.h  FontRenderer.cpp  FontRenderer.h  FrameBuff.cpp  FrameBuff.h  FrameBuffBuilder.cpp  FrameBuffBuilder.h  GameHUD.cpp  GameHUD.h  GameModel.cpp  GameModel.h  GameScene.cpp  GameScene.h  HUD.cpp  HUD.h  HUDBase.cpp  HUDBase.h  Laser.cpp  Laser.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  ObjPicker.cpp  (+49 more)
src/engine/UI/: GameHUD.cpp  GameHUD.h
src/engine/buffers/: DefaultBuff.cpp  FrameBuff.cpp  FrameBuff.h  Laser.h  Line.cpp  Line.h  ObjPicker.cpp  ObjPicker.h  RenderBuff.cpp  StencilOutline.cpp  StencilOutline.h  UniformBufferObject.cpp  UniformBufferObject.h
src/engine/collisions/: Collider.cpp  Collider.h  CollisionHandler.cpp  CollisionHandler.h  CollisionMath.cpp  CollisionMath.h  LineCollider.cpp  LineCollider.h  SphereCollider.cpp  SphereCollider.h
src/engine/core/: SetupWindow.cpp  SetupWindow.h  initWindow.cpp
src/engine/lighting/: AmbientLight.cpp  AmbientLight.h  DiffuseLight.cpp  DiffuseLight.h  PointLight.cpp  PointLight.h
src/engine/lighting/pointLight/: MovingPointLight.cpp  MovingPointLight.h  PointLight.h
src/engine/maths/: MatrixManager.cpp  MatrixManager.h
src/engine/models/: GameModel.cpp  GameModel.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  Transform.cpp  Transform.h
src/engine/models/procedural/: Cube.cpp  Cube.h  PlainGround.cpp  PlainGround.h  Planet.cpp  Planet.h  Quad.h  Sphere.cpp  StaticMesh2D.cpp  StaticMesh2D.h  StaticMesh3D.h
src/engine/shaders/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramManager.h
src/engine/text/: CharacterProperties.h  CharacterRange.h  FontManager.cpp  FontManager.h  FontRenderer.cpp  FontRenderer.h  GameHUD.cpp  GameHUD.h  HUD.cpp  HUD.h  HUDBase.cpp  HUDBase.h
src/engine/textures/: Sampler.cpp  Sampler.h  SamplerManager.cpp  Skybox.cpp  Skybox.h  TextureLoader.cpp  TextureLoader.h  TextureManager.cpp  TextureManager.h
src/engine/utils/: Buffer.cpp  Buffer.h  ErrorCallback.h  MathUtils.cpp  MathUtils.h  PathHelper.cpp  PathHelper.h  RandomGenerator.cpp  RandomGenerator.h  string_utils.h
src/game/: Collectible.cpp  Collectible.h  GameHUD.cpp  GameHUD.h  GameModel.cpp  GameModel.h  GameScene.cpp  GameScene.h  Ship.cpp  Ship.h
src/game/UI/: GameHUD.cpp  GameHUD.h
src/game/elements/: Camera.cpp  Camera.h  Laser.cpp  Laser.h
src/game/models/: Collectible.cpp  Collectible.h  Enemy.cpp  Enemy.h  Planet.cpp  Planet.h  Ship.cpp  Ship.h  Sun.cpp  Sun.h  Turret.cpp  Turret.h
src/game/objects/: Collectible.cpp  Collectible.h  Ship.cpp  Ship.h
src/shaders/: assimp.frag  assimp.vert  ground.frag  ground.fs  ground.vert  ground.vs  lighting.incl  line.frag  line.vert  normals.vert  ortho.frag  ortho.vert  shader.frag  shader.fs  shader.vert  shader.vs  shaderOutline.frag  shaderOutline.vert  skybox.frag  skybox.vert  structs.incl
